修复字段裁剪规则bug_huanghai

--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.gengyun.service.exportToXLS</mainClass>
+                            <mainClass>ApplicationNewsExport</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
