--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,5 +1,5 @@
 #链接到MRP项目servreSocket的ip和port
-#SERVER_IP=118.118.118.15
+#SERVER_IP=118.118.118.80
 #SERVER_IP=118.118.118.201
 SERVER_IP=222.85.149.5
 SERVER_PORT=65431
@@ -7,5 +7,5 @@ SERVER_PORT=65431
 #标识推送公司的唯一ID
 companyId=001
 
-#心跳日志
-watchDogPath= watchDog.log
+#推送记录日志
+pushRecordsPath= pushRecords.log
